[package]
name = "coretermion"
version = "0.1.0"
authors = ["adjivas <adjivas@users.noreply.github.com>"]

[features]
jap = []

[lib]
name = "coretermion"
crate-type = ["staticlib"]

[dependencies.itertools]
version = "0.4"

[dependencies.collect_slice]
version = "1.0.0"

[dependencies.termion]
version = "*"

[dependencies.nalgebra]
version = "*"

[dependencies.libc]
version = "*"

[dependencies.va_list]
version = "0.0.3"

[dependencies.vorbis]
git = "https://github.com/tomaka/vorbis-rs"

[dependencies.openal-rs]
git = "https://github.com/jpernst/openal-rs.git"
